<resources>
    <string name="app_name" translatable="false">NHLauncher</string>
    <string name="custom_theme_manager">Custom theme manager</string>
    <string name="loading">Loading…</string>
    <string name="settings_manager">Settings manager</string>
    <string name="theme_manager">Theme manager</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="edit_this_command">Edit this command</string>
    <string name="favourite_add_delete">Favourite add/delete</string>
    <string name="add_new_button">Add new button</string>
    <string name="delete_this_button">Delete this button</string>
    <string name="delete_button">Delete button</string>
    <string name="this_will_delete_yout_button_from_all_categories_are_you_sure">This will DELETE yout button from all categories. Are you sure?</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="edit_command">Edit command</string>
    <string name="new_cmd">New cmd</string>
    <string name="save">Save</string>
    <string name="new_button">New button</string>
    <string name="button_name">Button name</string>
    <string name="button_cmd">Button cmd</string>
    <string name="button_description">Button description</string>
    <string name="add">Add</string>
    <string name="run_setup">Run setup</string>
    <string name="backup_custom_tools">Backup custom tools</string>
    <string name="restore_custom_tools">Restore custom tools</string>
    <string name="cancel">Cancel</string>
    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
    </string-array>
    <string name="sorting">Buttons sorting</string>
    <string name="category_ft">FT - Favourite Tools</string>
    <string name="category_01">01 - Information Gathering</string>
    <string name="category_02">02 - Vulnerability Analysis</string>
    <string name="category_03">03 - Web Application Analysis</string>
    <string name="category_04">04 - Database Assessment</string>
    <string name="category_05">05 - Passwords Attacks</string>
    <string name="category_06">06 - Wireless Attacks</string>
    <string name="category_07">07 - Reverse Engineering</string>
    <string name="category_08">08 - Exploitation Tools</string>
    <string name="category_09">09 - Sniffing &amp; Spoofing</string>
    <string name="category_10">10 - Post Exploitation</string>
    <string name="category_11">11 - Forensics</string>
    <string name="category_12">12 - Reporting Tools</string>
    <string name="category_13">13 - Social Engineering</string>
    <string name="no_fav_tools">No favourite tools yet!</string>
    <string name="no_newtext_entry">Input tool name to begin search</string>
    <string name="cant_found">"Can't found: "</string>
    <string name="check_your_query">check your query!</string>
    <string name="cant_delete">You can\'t delete it!</string>
    <string name="deleted">Deleted!</string>
    <string name="deleting">"Deleting "</string>
    <string name="current_cmd">"Current cmd: "</string>
    <string name="empty_input">Empty input!</string>
    <string name="command_updated">Command updated!</string>
    <string name="removed_favourite">Removed from favourite!</string>
    <string name="added_favourite">Added to favourite!</string>
    <string name="choose_option">Choose option</string>
    <string name="saved_to">"Saved to: "</string>
    <string name="ex_storage">External storage not avaiable!</string>
    <string name="backup_failed">Backup failed! Missing permissions…</string>
    <string name="bf_not">Backup file not found!</string>
    <string name="bp_restored">Backup restored successfuly!</string>
    <string name="err_backup_dir">Error creating backup directory!</string>
    <string name="name_exist">Name already exist!</string>
    <string name="added">Added!</string>
    <string name="name_empty">Name is empty!</string>
    <string name="desc_empty">Description is empty!</string>
    <string name="cmd_empty">Command is empty!</string>
    <string name="no_tools_stat">No used tools yet!</string>
    <string name="usage">"Usage: "</string>
    <string name="apps_error">NetHunter and/or NetHunter Terminal app is not installed! Please read NHLauncher documentation and use your brain…</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="choose_font">Choose font:</string>
    <string name="default_sorting">Default</string>
    <string name="by_usage">By usage</string>
    <string name="first_setup">If you running NHLauncher for the first time, please run setup to install all tools that this launcher have. It require internet connection and some disk space. You can run it later from settings!</string>
    <string name="setup">Setup</string>
    <string name="perm_dialog">Please grant all files permission, so NHLauncher can access storage and save/restore backups!</string>
    <string name="all_file_perm">All file permissons!</string>
    <string name="allow">Allow</string>
    <string name="categories">Categories</string>
    <string name="get_out">Please choose 01–13 category!</string>
    <string name="restore_fail">Restore failed! Missing permissions…</string>
    <string name="animate_buttons">Buttons animations</string>
    <string name="enable_splash_screen">Enable splash screen</string>
    <string name="missing_activity_error">Wrong NetHunter terminal version found! Please read documentation on github…</string>
    <string name="button_menu">Choose option</string>
    <string name="options">options</string>
    <string name="enable_dynamic_themes">Enable dynamic colors (Android 12+)</string>
    <string name="hex_color">Hex color value</string>
    <string name="color_info">You can disable dynamic theme (A12+), and use custom material color here!</string>
    <string name="apply_colors">Apply settings</string>
    <string name="search_tool_name">Search tool name</string>
    <string name="tools">Tools menu</string>
    <string name="search_hint">Search for tools</string>
    <string name="advanced_themes">Advanced mode</string>
    <string name="hex_color1">Hex color1 value</string>
    <string name="hex_color2">Hex color2 value</string>
    <string name="hex_color3">Hex color3 value</string>
    <string name="choose_color">Choose color</string>
    <string name="all_categories">AC - All Categories</string>
    <string name="update_wait">Checking for updates…</string>
    <string name="check_internet_connection">Check your internet connection!</string>
    <string name="current_app_version">"Current version: "</string>
    <string name="new_app_version">"New version: "</string>
    <string name="update_avaiable">Update available!</string>
    <string name="giga_chad">Welcome to the test version!</string>
    <string name="already_updated">Already updated!</string>
    <string name="something_fucked_up">Something went wrong!</string>
    <string name="update_button">Download update!</string>
    <string name="enable_vibrations">Enable vibrations</string>
    <string name="addons">Addons</string>
    <string name="bluetooth_toolkit">Bluetooth Toolkit</string>
    <string name="perform_various_bluetooth_attacks_using_simple_tools_gui_internal_bluetooth_requires_rfcomm_uart_h4_vhci_and_binder_ipc_enabled_in_kernel_or_bt_smd_driver_device">Perform various Bluetooth attacks using simple tools GUI. Internal bluetooth requires RFCOMM, UART H4, VHCI and BINDER_IPC enabled in kernel or bt_smd driver device</string>
    <string name="interfaces">Interfaces</string>
    <string name="services">Services</string>
    <string name="scan_time">Scan Time</string>
    <string name="scan">Scan</string>
    <string name="scan_results">Scan results</string>
    <string name="wifi_throttling_warning">WiFi Throttling warning!</string>
    <string name="it_looks_like_you_have_wi_fi_throttling_enabled_it_limit_scanning_to_4_times_per_2_minutes_you_can_disable_it_for_unlimited_scanning_here_developer_options_networking_wi_fi_scan_throttling">It looks like you have Wi-Fi throttling enabled, it limit scanning to 4 times per 2 minutes. NHLauncher will attempt to restart wifi to avoid throttling. If scanning problems occurs, you can disable it for unlimited scanning here: Developer Options > Networking > Wi-Fi scan throttling</string>
    <string name="open_settings">Open settings</string>
    <string name="use_new_buttons_style">Use new buttons style</string>
    <string name="you_can_customize_your_nhlauncher_feedback_here">You can customize your NHLauncher feedback here</string>
    <string name="choose_language">App language</string>
    <string name="check_your_tools_usage_statistics">Check your tools usage statistics!</string>
    <string name="open_source_libraries_in_nhlauncher">Open source libraries in NHLauncher</string>
    <string name="nhlauncher_github" translatable="false">NHLauncher GitHub</string>
    <string name="db_error">Database is empty!</string>
    <string name="themes_settings">Themes</string>
    <string name="general">General</string>
    <string name="root_error">ROOT PERMISSION IS REQUIRED!!!</string>
    <string name="yes">OK</string>
    <string name="click_to_check_for_updates">Click me to check for updates!</string>
    <string name="nhlauncher_add_ons">NHLauncher Add-ons</string>
    <string name="use_themed_icons_overlay">Use themed icons overlay</string>
    <string name="location_denied">Location permission denied!</string>
    <string name="custom_pin">Custom pin</string>
    <string name="wps_attack">WPS Attack</string>
    <string name="oneshot_performs_wps_pin_and_pixie_dust_attack_without_having_to_switch_to_monitor_mode">OneShot performs WPS PIN and Pixie Dust attack without having to switch to monitor mode</string>
    <string name="pixie_dust">Pixie Dust</string>
    <string name="online_bruteforce">Online Bruteforce</string>
    <string name="pixie_force">Pixie Force</string>
    <string name="wps_button">WPS Button</string>
    <string name="delay">Delay</string>
    <string name="launch_attack">Launch attack</string>
    <string name="wps_desc_short">USE ONESHOT SCRIPT TO PERFORM WPS ATTACKS</string>
    <string name="bt_short">PERFORM VARIOUS BLUETOOTH ATTACKS</string>
    <string name="bt_toolkit">BLUETOOTH TOOLKIT</string>
    <string name="wifi_networks_will_be_displayed_here">WiFi networks will be displayed here</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="sdp_tool" translatable="false">SDP TOOL</string>
    <string name="scan_is_running_please_wait">Please wait…</string>
    <string name="advertise">Advertise</string>
    <string name="bledesc">These scripts are an experimental PoC that uses Bluetooth Low Energy (BLE) to send proximity pairing messages to Apple devices</string>
    <string name="choose_interface">Choose interface</string>
    <string name="bt_devices_will_be_displayed_here">BT devices will be displayed here</string>
    <string name="buttons_count_in_layout">Buttons count in layout</string>
    <string name="category">Category</string>
    <string name="netscanner">Discover open ports, vulnerabilities and more using Nmap! Customize and run your prompt with just a few clicks!</string>
    <string name="netscanner2">Discover network devices, and their weak points!</string>
    <string name="local_devices_will_be_displayed_here">Local devices will be displayed here</string>
    <string name="tools_in_the_db">"Tools in the database: "</string>
</resources>