<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_theme_dialog_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_manager"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sorting_spinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/checkUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:maxLines="3"
        android:padding="5dp"
        android:text="@string/update_wait" />

    <CheckBox
        android:id="@+id/vibrations_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enable_vibrations" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_button"
            android:visibility="gone" />

        <Button
            android:id="@+id/run_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/run_setup" />

        <Button
            android:id="@+id/db_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_custom_tools" />

        <Button
            android:id="@+id/db_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore_custom_tools" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />

    </LinearLayout>

</LinearLayout>
