<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bt_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/you_can_customize_your_nhlauncher_feedback_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/custom_theme_dialog_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_info2">

        <LinearLayout
            android:layout_margin="5dp"
            android:padding="5dp"
            android:id="@+id/spinnerBg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/choose_language"
                android:padding="10dp"
                android:textSize="15sp"
                app:spinner_arrow_show="false"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.1dp"
                app:spinner_item_array="@array/languages"
                app:spinner_item_height="50dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_elevation="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:padding="5dp"
            android:id="@+id/spinnerBg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/sorting_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/sorting"
                android:padding="10dp"
                android:textSize="15sp"
                app:spinner_arrow_show="false"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.1dp"
                app:spinner_item_array="@array/sorting"
                app:spinner_item_height="50dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_elevation="10dp" />

        </LinearLayout>



        <TextView
            android:id="@+id/checkUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:maxLines="3"
            android:padding="5dp"
            android:text="@string/update_wait" />

        <CheckBox
            android:id="@+id/vibrations_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enable_vibrations" />

        <CheckBox
            android:id="@+id/newbuttons_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/use_new_buttons_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/run_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_setup" />

            <Button
                android:id="@+id/db_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_custom_tools" />

            <Button
                android:id="@+id/db_restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_custom_tools" />

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>