<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_theme_dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sdp_tool"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <TextView
            android:id="@+id/sdp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_is_running_please_wait"
            android:textIsSelectable="true" />
    </ScrollView>

    <Button
        android:id="@+id/copy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_clipboard" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
