<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/material_dynamic_secondary20"
    >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/loading" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/this_will_delete_yout_button_from_all_categories_are_you_sure" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <Button
            android:backgroundTint="@color/material_dynamic_secondary30"
            android:textColor="@color/material_dynamic_secondary80"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"
            tools:ignore="ButtonStyle" />

        <Button
            android:backgroundTint="@color/material_dynamic_secondary30"
            android:textColor="@color/material_dynamic_secondary80"
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
